# DM-Code-Agent

./: .env  .env.example  .gitignore  =2.3.0  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  RAG_INTEGRATION_SUMMARY.md  RAG_REFACTORING.md  README.md  README_EN.md  README_FR.md  SECURITY.md  SOUL.md  agent.yaml  check_mcp_env.py  config.json.example  main.py  mcp_config.json.example  pyproject.toml  python_basics.py  rag_examples.py  requirements.txt  test_rag.py  test_rag_integration.py  test_rag_modifications.py  test_rag_simple.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
bench_reports/: economics.json  economics.md
benchmarks/: README.md  run_coding_bench.py
deepseek_agent/: __init__.py  agent.py  client.py  llm_factory.py  tools.py
dm_agent/: __init__.py
dm_agent/benchmarks/: __init__.py  cli.py  economics.py  manifest_diff.py  models.py  runner.py  tasks.py
dm_agent/clients/: __init__.py  base_client.py  claude_client.py  deepseek_client.py  gemini_client.py  llm_factory.py  openai_client.py  zhipuai_client.py
dm_agent/core/: __init__.py  agent.py  critic.py  planner.py  reflexion.py  self_consistency.py
dm_agent/evals/: __init__.py  cli.py  models.py  real_runner.py  runner.py  scripted_client.py  tasks.py
dm_agent/log/: logs.txt
dm_agent/mcp/: client.py  config.py  manager.py
dm_agent/memory/: __init__.py  context_compressor.py  index_cli.py  retriever.py
dm_agent/prompts/: __init__.py  code_agent_prompt.md  code_agent_prompt.py  system_prompts.py
dm_agent/rag/: __init__.py  (+3 more)
docs/: architecture.drawio  autonomous-roadmap.md  benchmarks.md  product.md  release-v2.0.0.md  tracing.md
evals/: README.md  run_evals.py  tasks.json
sort/: bubble_sort.cpp  bubble_sort.py  insertion_sort.cpp  insertion_sort.py  selection_sort.cpp  selection_sort.py
task/: apex_search_results.txt  apex英雄_搜索报告.md  apex英雄搜索结果.md  hello.py
tests/: test_cli_ui.py  test_coding_benchmarks.py  test_critic.py  test_deepseek_client.py  test_evals.py  test_memory_compressor.py  test_planner_agent.py  test_reflexion.py  test_retriever.py  test_self_consistency.py  test_skills_and_mcp.py  test_swebench_loader.py  test_tools.py  test_tracing.py
(+69 files in other folders)
