[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dm-code-agent"
version = "1.7.1"
description = "A local-first, auditable Python Code Agent with ReAct, trace/replay, MCP tools, planning, benchmarks, memory compression, and skills."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "hwfengcs" }
]
keywords = [
  "ai-agent",
  "code-agent",
  "react-agent",
  "mcp",
  "trace",
  "benchmark",
  "code-maintenance",
  "llm",
  "python",
  "agent-framework"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "colorama>=0.4.6,<1.0.0",
  "openai>=1.0.0",
  "anthropic>=0.18.0",
  "google-genai>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
  "build>=1.2.0",
]
swebench = [
  "datasets>=2.14.0",
]
rag = [
  "rank-bm25>=0.2.2",
  "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/hwfengcs/DM-Code-Agent"
Repository = "https://github.com/hwfengcs/DM-Code-Agent"
Issues = "https://github.com/hwfengcs/DM-Code-Agent/issues"

[project.scripts]
dm-agent = "main:main"
dm-agent-eval = "dm_agent.evals.cli:main"
dm-agent-bench = "dm_agent.benchmarks.cli:main"
dm-agent-trace = "dm_agent.tracing.cli:main"
dm-agent-index = "dm_agent.memory.index_cli:main"
dm-agent-economics = "dm_agent.benchmarks.economics:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["dm_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
